[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["LVQClassifier.py"]

[project]
name = "lvqc"
version = "1.0"
dependencies = [
  "numpy",
]
requires-python = ">=3.9"
authors = [
  {name = "Wing-Fai Thi", email = "wingfai.thi@googlemail.com"},
]
description = "Learning Vector Quantization Classifier"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["Data science", "Machine learning"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3.9"
]

[project.urls]
Homepage = "https://www.astrowing.eu"
Repository = "https://github.com/wfthi/LearningVectorQuantizationClassifier.git"
